--- a/src/pages/About-page/about-page.scss
+++ b/src/pages/About-page/about-page.scss
@@ -7,10 +7,12 @@
     // min-height: 700px;
     @media screen and (max-width:1024px) {
         flex-direction: column;
-        margin: auto;
+        margin: 20px auto;
+        gap: 20px;
         .aside{
         width: 90%;
         margin: auto;
+        gap: 20px;
     }
     }
 }
